--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "4.0.3",
     "react-scroll-to-bottom": "^4.1.2",
+    "reactjs-popup": "^2.0.5",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
